# ChangeLog for gnome-base/gnome-session
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-session/ChangeLog,v 1.319 2013/03/28 17:10:00 pacho Exp $

*gnome-session-3.8.0 (28 Mar 2013)

  28 Mar 2013; Pacho Ramos <pacho@gentoo.org> +gnome-session-3.8.0.ebuild:
  Version bump for Gnome 3.8

  03 Feb 2013; Alexandre Rostovtsev <tetromino@gentoo.org> metadata.xml:
  Switch to global systemd USE flag.

*gnome-session-3.6.2-r2 (03 Feb 2013)

  03 Feb 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
  -gnome-session-3.6.2.ebuild, gnome-session-3.6.2-r1.ebuild,
  +gnome-session-3.6.2-r2.ebuild, +files/defaults.list-r1:
  Update default gnome file handlers: fix nautilus-3.6 directory handling (bug
  #449486), prefer chromium over epiphany, fall back to libreoffice or
  openoffice if abiword and gnumeric are not installed. Drop old 3.6.2 ebuild
  and propagate ~arm keyword to -r1 and -r2.

  02 Feb 2013; Agostino Sarubbo <ago@gentoo.org> gnome-session-3.6.2.ebuild:
  Add ~arm, wrt bug #449220

*gnome-session-3.6.2-r1 (22 Jan 2013)

  22 Jan 2013; Alexandre Rostovtsev <tetromino@gentoo.org>
  gnome-session-2.32.1-r3.ebuild, +gnome-session-3.6.2-r1.ebuild,
  +files/gnome-session-3.6.2-upower.patch:
  For gnome-session-3.6, fix upower suspend problems (bug #450150, thanks to
  Tiziano Müller). For gnome-session-2.32, depend on <gconf-3.2.6, since
  >=gconf-3.2.6 no longer has gconf-sanity-check-2.

  27 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  gnome-session-2.32.1-r3.ebuild:
  Require gconf[gtk], now that gconf-sanity-check-2 is optional.

*gnome-session-3.6.2 (25 Dec 2012)

  25 Dec 2012; Gilles Dartiguelongue <eva@gentoo.org>
  -gnome-session-3.2.1-r1.ebuild,
  -files/gnome-session-3.2.1-kernel-boot-line.patch,
  -gnome-session-3.4.1.ebuild, +gnome-session-3.6.2.ebuild,
  files/defaults.list, metadata.xml:
  Version bump for Gnome 3.6.

*gnome-session-3.4.2.1 (24 May 2012)
