@@ -19,17 +19,18 @@ DIST gnome-session-2.32.1.tar.bz2 774842 SHA256 22d93ce433fcf9c7ce6b5f36dd81f64e
 DIST gnome-session-3.4.2.1.tar.xz 725144 SHA256 2fbcf10d4ad8648197fefde2052abd8bf16b827781a974f59ac118e7dd0db433 SHA512 c5f62b6017509b0a5ed95d67435a6d96614a1ec1b7ec7022ff5c4fd813988d4cda308303603a8e01a7359918274091cb127f7f25788efd89cfb4849ec3c2ff2d WHIRLPOOL 7dac382724a512b6720de32a7657516c625051b142e6f85a3eb4381b6b141e5aae63b071014d4c073505c253ab33a9957efec44053ddfd4b54c95a6ec1f52dbc
 DIST gnome-session-3.6.2.tar.xz 729676 SHA256 2e3a3466eed4136826e150b639c63beb5c93710346dea2e538adfe5e18d701b4 SHA512 3ae043a241695e26bbcfe70cb58263e74bfb62c1859d46828118740e3580df516f17c73d5a348d381ead7886333c71eb9bca2bed6e494f234b8d733a9fd37083 WHIRLPOOL 833cff921461759510fd31cb3d2bf2959d486ccd51971d401f30d85bf93878264e9ebbdba866bb9c3a05aff3a00d0f6d043958407a783dc6f7d9d5d78f62f7ac
 DIST gnome-session-3.8.0.tar.xz 768856 SHA256 7892c4ef5049bf5f4ac75bc82b554c1c5f962249108c8467df1be0f947b5a99f SHA512 81fa89b8f2d232a31f59250e40a183e5fc1bd29fd56cf14dff0f9ba5cd6e891fcdec99fa616556e43ba79e0d5b0a9f9ef838f9383c7f847bc975a4f5cd9c4be9 WHIRLPOOL 17e7f057f7f0e42e48d118c834cedc61cdcf70005c639737977262c6957a2567dd42c2d7dd2a739b9a8747f33fcba074aa4dae7f1a67999d9cee9713e631bae4
+DIST gnome-session-3.8.1.tar.xz 771568 SHA256 6c1cf3c0bc86da1dc5ec2d1a7bb3332b15652d4a468c52c5ae894b46b4a14770 SHA512 95a218c63bd6c9d0d04fc094923a245485361d995dc5753c4e8573c269c85ad3d91de42e67eb469f33ca6df1ae6636de42b109696967e4640ffe89f11f8d9d81 WHIRLPOOL ddb3319ddb1eac9a4cf1dd3ed618fbf490188a25ba2d57430902a7915a91ad1b45db1e8ed3c0965fca75cf6f9e2ae999440f7572adddefc6157b13c398e3b722
 EBUILD gnome-session-2.32.1-r3.ebuild 2972 SHA256 b67ca3d7c561adccea184b8a70e047a0009ead24da57d3a9d508a43f79289674 SHA512 c1ede08752fadb66a2d95f9b01a567170e72943ad71c6bbf23f12e1b70516e0b2de10a394b7811507e84b49164f303f715059b7d8972cfc2d6e66f76826c50f6 WHIRLPOOL 37a7fb42d6d44f76f7d23f7a3158589d9381e2c830e40e593a8b51b70ef00f590a7f7dae3ae0439e80e275a43bc607f47aca31ae2d69c113e7452901021e4379
 EBUILD gnome-session-3.4.2.1.ebuild 3064 SHA256 c4abe9f9cd9505f24cae85cda70825042730b2637d8e270388b2233888ad2554 SHA512 034bd231662c88b3fc9f5fd8f2c0e56434e7e24dc5c352cd2cd3da8c53d4f707fad5a6291282c551cf1fcbf490c02215128867d121097df27b57b4ad75040f05 WHIRLPOOL 7db86cc7a003f507f1edc4c8122ce3de103c11899644f958c657e270e0137ad212244f6e07c5cbe495c118d9d2e45dc64a33d4b46e91a29fd6bf0b4c81d2bad5
-EBUILD gnome-session-3.6.2-r1.ebuild 3347 SHA256 8725c722302d8810bd30b09af7abf2d9522d45806cea49ea5571554ab9143219 SHA512 4325bcf521ac186f45fbb1b9db2270ee0b6849e9702f95694acc3b463c24023de49552c490b7eed0b07e84719a06878b8f81bbb20f4b0296a022679d61de13e7 WHIRLPOOL 8689ea7d6dc13d1f019c1e48ea006703d49fa57924d12c1e6f3fdb931d25df1fd59a7c7f6ef4d97086143b815bfe04c2fe93e1b805cd0081625ac922a29e9a49
 EBUILD gnome-session-3.6.2-r2.ebuild 3365 SHA256 b2adb00a1c10ef4a8ce0a6b96f31b7eb76193fae38320df9c30c494c43f89c6a SHA512 188f8abc64f80365cb7d83733c9dfe7653a2b732d4c5080aae171f7aaec387dc7aa2d339fc36b82b47ee7aa5c0d36a63eadf283b969c06ed3d9fe5a95cc5dc12 WHIRLPOOL 9778e21e4f0f7f62311422b213534fdea534b9abd1521c376700f3c58aabbb68f7c7954f77e8baf52aa29a90c84d279921de4323413ad028a6fad88a2ef1d372
 EBUILD gnome-session-3.8.0.ebuild 3329 SHA256 d5892ef2fb956339e84eb378d3718cb95699d3f1f7b0cdf163fe150602ddf868 SHA512 804811f6995e78a3a3f068d9b4a97e280817985cdc3f0b2f8f58e764f54ca69565a48562b788b9b128fc1d59670b0120514b173094006033794eef9bea3f2358 WHIRLPOOL d4a53c479e1f4e305fa5948b66f0769b617312a53ed841f4f2503d1734545005cf9a73df0622a2f408415a4be16c40053ebed5c8bd0599f9db8161aaf9616bf0
-MISC ChangeLog 47707 SHA256 5de44b3f9b5165824dba2eed8abce2738239d51e04becdad19b8cbb45f662014 SHA512 1153e8dad9f9163204ba47763e6e29019208c68e2a4d4c1e92ffc1183f4fe7d131e476687f2b724b34c7d8b0b9a5b0c861469ee85f065ab16ec7df030097d0f5 WHIRLPOOL 6a07381fbd4550df25797e283614d0fb2a38bc9d51c8f5be442dfc01a9c0738eec8dc5b1134ff0c0cc35c51ad2d04d7847f748474551f988f3a4ec04ff3d2995
+EBUILD gnome-session-3.8.1.ebuild 3479 SHA256 a2a117baf4c4cb5206887cf06d13ef8141304aab282bb2749ff713dc4a7d14c7 SHA512 f755962c2beb7712c934017f829ea62c22d82ddec2e368cad6a91a8176c98081eb714371e1b65ee04ed6f476506d22d754d1ed4b0e7cdf4f421101d981d35065 WHIRLPOOL 514aef80d358e84c9c3bc2c2b35da140d92f57035bbe3cb5676f192af344ff64ca66a92a6cf46b62b7a3718c90e090dfd01ca8f9c1ea8a3adaa3ea32110b7693
+MISC ChangeLog 47961 SHA256 d576b17f3803a68300a4d9288f61ca5dc29f536adc74920bccb735d999973ce2 SHA512 6265cd0ac468801dbb3461ab6f0fe7c2b5f7b7dd07cebea633ff63ee276aeb1d29a06daff72e32934a991069a22a3544704908532af478633a3afa1a2c6a09f0 WHIRLPOOL 9144a4d5a45175d505af9aa2d5ea66ca56bd26b1d7d9a2e453c1dff143859e7a410eea2e62a89c9000364bb9da037ce0528c3db1ef33ecc0b1b02b4f30aac88e
 MISC metadata.xml 278 SHA256 4b6d5cc443e75f79675a992f133fdcf809fc528ca0e53bdbaf96a69383323c1d SHA512 32c59f5a0898ec7378ad33ac5a3f885f9b825633dfc0373603d413e8bf36b264c4efe03b8c0f4813237474ad858f929a74643869b7604c128e1ac5a5d1875b60 WHIRLPOOL 5552633b5518f886a89fa3a7b69ca5e8e7b81cc3436dc573e10990a4dea1e40ef14731a756501266449bbde0d9211145f9dccf3e3b728036645d6de1a6995295
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlFUeWoACgkQCaWpQKGI+9RYiwCfcmo+X/pqg3Czl+57zCMTfwhK
-OkEAn2SoLrkP6u3Lajnk2FCZ73NzRzGY
-=OMf7
+iEYEAREIAAYFAlF74Y0ACgkQCaWpQKGI+9TmvACeJlQgFiAH08mJdtwYWgun6zp7
+NHkAnjd7Z0wmGaWA2L8wNbvZ8AHHfC7O
+=ZfFK
 -----END PGP SIGNATURE-----
