@@ -1,6 +1,13 @@
 # ChangeLog for gnome-base/gnome-session
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-session/ChangeLog,v 1.319 2013/03/28 17:10:00 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-session/ChangeLog,v 1.320 2013/04/27 14:32:44 pacho Exp $
+
+*gnome-session-3.8.1 (27 Apr 2013)
+
+  27 Apr 2013; Pacho Ramos <pacho@gentoo.org> +gnome-session-3.8.1.ebuild,
+  -gnome-session-3.6.2-r1.ebuild:
+  Version bump, also allow people to configure startup apps, bug #464968,
+  upstream bug #663767. Drop old.
 
 *gnome-session-3.8.0 (28 Mar 2013)
 
